--- a/eCommerceAPI/eCommerceAPI/eCommerceAPI.csproj
+++ b/eCommerceAPI/eCommerceAPI/eCommerceAPI.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\Infrustructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
