--- a/eCommerceAPI/Core/Core.csproj
+++ b/eCommerceAPI/Core/Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Stripe.net" Version="39.111.0" />
   </ItemGroup>
 
 </Project>
